Use `LIKE` functionality for schema import
Co-authored-by: Ferenc Csaky <ferenc@datasqrl.com>